# spotify-dl-gui

./: CMakeLists.txt
src/: downloader.cpp  downloader.h  exec-stream.cpp  exec-stream.h  main.cpp  window.cpp  window.h
src/posix/: exec-stream-helpers.cpp  exec-stream-helpers.h  exec-stream-impl.cpp
